[tool.poetry]
name = "pichayon-door-controller"
version = "0.1.0"
description = ""
authors = ["Thanathip Limna <boatkrap@gmail.com>"]
readme = "../README.md"
packages = [{include = "pichayon", from = ".."}]

[tool.poetry.dependencies]
python = "^3.9"
wheel = "^0.40.0"
nats-py = "^2.3.1"
tinydb = "^4.8.0"
tinydb-serialization = "^2.1.0"
flask = "^2.3.2"
pyserial-asyncio-fast = "^0.16"
pycryptodome = "^3.23.0"
lgpio = "^0.2.2.0"
rpi-lgpio = "^0.6"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pichayon-door-controller = 'pichayon.cmd.door_controller:main'


